# Jumeau_Numerique

./: .gitignore
config/: dynamixel_ids.yaml  joint_mapping.yaml  real_hexapod_bridge.yaml
docs/: phantomx_known_id_hypotheses.md  procedure_scan_robot_reel.md
hexa_simulation/: README.md  package.xml  setup.cfg  setup.py  utilisation.md
hexa_simulation/config/: params.yaml
hexa_simulation/hexa_simulation/: gui_bridge.py  sim_hexa.py
hexa_simulation/launch/: display_rviz.launch.py
hexa_simulation/rviz/: hexapode.rviz
hexa_simulation/scripts/: README.md
hexa_simulation/urdf/: hexapode.urdf
input/: 03_roles_equipe.md  04_planning_jalons.md  05_livrables_par_personne.md  09_organisation_projet.md  architecture_hexapod_description.md
launch/: offline_real_sync_test.launch.py
output/: 01_feuille_de_route.md  02_lots_de_travaux.md  06_analyse_risques.md  07_synthese_professeur.md  08_priorites_mvp.md  10_cadrage_utilisation_ia.md  11_definitions_ros_architecture.md  12_strategie_rviz_vers_gazebo.md  13_contrat_mvp_interfaces_ros.md  README.md  feuille_de_route.md  table_correspondance_sliders_joints_urdf.md
tests/: test_dynamixel_readonly_scan_static.py  test_joint_mapping_schema.py  test_joint_state_publish.py  test_raw_to_radians.py
tools/: dynamixel_readonly_probe.py  dynamixel_readonly_scan.py  fake_dynamixel_bus.py  offline_joint_state_bridge.py  raw_to_radians.py  validate_joint_mapping.py
urdf/: hexapode_v1.urdf  hexapode_v2.urdf
